# Schur-Docker

./: Dockerfile  README.md
schur/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac  readme.html  schur.doxygen.in  schur.iss.in  schur.spec.in
schur/dat/: Makefile.in
schur/debian/: schur.1
schur/help/: HELP  Makefile.in
schur/src/: Getl.h  Makefile.in  init.c  init.h
schur/tests/: Makefile.am  Makefile.in  common_test  extract_example.c  extract_example.l  specialTest  specialTest.cmds  specialTest.expected  testrule.schur  testrule2.schur  testrule3.schur  trim.c
